# online_scriptor

./: .gitignore  Design.MD  Feasibility.MD  README.MD
backend/: CMakeLists.txt  Makefile  README.MD  README_OLD.MD  buffer_helper.cpp  buffer_helper.hpp  cmd_mgr.cpp  cmd_mgr.hpp  cmd_msg.cpp  cmd_msg.hpp  conanfile.txt  config.hpp  db_guard.cpp  db_guard.hpp  http_mgr.cpp  http_mgr.hpp  http_ws_mgr.cpp  io_data_msg.cpp  io_mgr.cpp  io_mgr.hpp  io_msg.hpp  main.cpp  maketesting.sh  script_helper.cpp  script_helper.hpp  script_mgr.cpp  script_mgr.hpp  script_mgr_thread.cpp  task.cpp  task.hpp  task_db_helper.cpp  task_db_helper.hpp  task_db_mgr.cpp  task_db_mgr.hpp  task_manager.cpp  task_manager.hpp  task_mgr.cpp  task_mgr.hpp  test_task_mgr.cpp  test_task_mgr.hpp  (+5 more)
feasibility/: Feasibility.MD
feasibility/event_multithread/: main.cpp
feasibility/event_signal/: main.cpp
feasibility/fork_test/: main.cpp
feasibility/httplib_ws_test/: CMakeLists.txt  conanfile.txt  main.cpp
feasibility/leveldb_test/: Makefile  conanfile.txt  main.cpp
feasibility/libevent_test/: main.c
feasibility/libevent_timer/: main.cpp
feasibility/stdio_redirect_test/: main.c
feasibility/unixsock_test/: Makefile  conanfile.txt  main.cpp
feasibility/uws_send_test/: CMakeLists.txt  README.MD  conanfile.txt  main.cpp
frontend/: index.html  style.css  task.html  taskHelper.js
misc/: mock.html
